fix navbar spacing

--- a/informapp/src/style.css
+++ b/informapp/src/style.css
@@ -58,13 +58,28 @@ body {
 }
 
 .navbar-toggler .navbar-toggler-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E") !important;
 }
 
 /* navbar */
 .navbar-default {
   background-color: #4b2e83;
   border-color: #e7e7e7;
+  padding: .5rem 1rem;
+}
+
+.navbar-nav {
+  font-size: 0.8em;
+}
+
+.navbar-light .navbar-toggler {
+  color: white !important;
+  border-color: white !important;
+}
+
+.navbar-nav .nav-link {
+  padding-right: 1rem !important;
+  padding-left: 1rem !important;
 }
 
 /* Title */
@@ -210,7 +225,7 @@ input.search-query:hover {
   color: #333;
   white-space: nowrap;
   margin: 0;
-  transition: background-color 0.4s ease;
+  transition: 0.4s ease;
 }
 .checkbox-menu li input {
   margin: 0px 5px;
